@@ -7,7 +7,12 @@ from pathlib import Path
 import pytest
 
 from git_dag.git_repository import GitRepository
-from git_dag.parameters import Params, ParamsDagGlobal, ParamsPublic
+from git_dag.parameters import (
+    Params,
+    ParamsDagGlobal,
+    ParamsPublic,
+    context_ignore_config_file,
+)
 
 TEST_DIR = Path(__file__).parent
 
@@ -28,24 +33,25 @@ def test_real_repository(repo_name: Path) -> None:
     Path(OUT_DIR).mkdir(parents=True, exist_ok=True)
 
     gv_file = OUT_DIR / f"{repo_name}.gv"
-    params = Params(
-        public=ParamsPublic(
-            show_unreachable_commits=True,
-            show_local_branches=True,
-            show_remote_branches=True,
-            show_trees=False,
-            show_trees_standalone=False,
-            show_blobs=False,
-            show_blobs_standalone=False,
-            show_tags=True,
-            show_deleted_tags=True,
-            show_stash=True,
-            show_head=True,
-            format="gv",
-            file=gv_file,
-        ),
-        dag_global=ParamsDagGlobal(bgcolor="transparent"),
-    )
+    with context_ignore_config_file():
+        params = Params(
+            public=ParamsPublic(
+                show_unreachable_commits=True,
+                show_local_branches=True,
+                show_remote_branches=True,
+                show_trees=False,
+                show_trees_standalone=False,
+                show_blobs=False,
+                show_blobs_standalone=False,
+                show_tags=True,
+                show_deleted_tags=True,
+                show_stash=True,
+                show_head=True,
+                format="gv",
+                file=gv_file,
+            ),
+            dag_global=ParamsDagGlobal(bgcolor="transparent"),
+        )
     GitRepository(repo_path, parse_trees=False).show(params)
 
     with open(REFS_DIR / f"{repo_name}.gv", "r", encoding="utf-8") as h:
